# bb-storage

./: go_dependencies.bzl
cmd/bb_storage/: BUILD.bazel  main.go
patches/com_github_bazelbuild_remote_apis/: justbuild.diff
pkg/blobstore/: BUILD.bazel  cas_read_buffer_factory.go  empty_blob_injecting_blob_access.go  multi_generation_blob_access.go  validation_caching_read_buffer_factory.go
pkg/blobstore/buffer/: BUILD.bazel  cas_checksum_validating_chunk_reader.go  cas_checksum_validating_reader.go  cas_chunk_reader_buffer.go  cas_error_handling_buffer.go  cas_reader_buffer.go  cas_semi_validating_chunk_reader.go  cas_validating_chunk_reader.go  cas_validating_reader.go  validated_byte_slice_buffer.go
pkg/blobstore/completenesschecking/: BUILD.bazel  completeness_checking_blob_access.go
pkg/blobstore/configuration/: BUILD.bazel  new_blob_access.go
pkg/blobstore/multigeneration/: BUILD.bazel  multi_generation_blob_access.go  sharded_controller.go  sharded_multi_generation_blob_access.go  single_generation.go
pkg/capabilities/: server.go
pkg/digest/: BUILD.bazel  bare_function.go  digest.go  function.go  instance_name.go  instance_name_patcher.go  set.go
pkg/empty_blobs/: BUILD.bazel  empty_blobs.go
pkg/filesystem/: file_info.go
pkg/justbuild/: BUILD.bazel  hashing_test.go  just_hash.go  parse_git_tree.go
pkg/proto/configuration/blobstore/: blobstore.pb.go  blobstore.proto
pkg/proto/multigeneration/: BUILD.bazel  multigeneration.pb.go  multigeneration.proto
