load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "justbuild",
    srcs = [
        "just_hash.go",
        "parse_git_tree.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/justbuild",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution"
    ],
)
