load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "multigeneration",
    srcs = ["multi_generation_blob_access.go",
            "single_generation.go",
            "sharded_multi_generation_blob_access.go"
            ],
    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/multigeneration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore",
        "//pkg/blobstore/buffer",
        "//pkg/digest",
        "//pkg/empty_blobs:emptyblobs",
        "//pkg/justbuild",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
    ],
)
