load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "multigeneration",
    srcs = ["multi_generation_blob_access.go",
            "single_generation.go",
            "sharded_multi_generation_blob_access.go",
            "sharded_controller.go",
            ],
    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/multigeneration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/blobstore",
        "//pkg/blobstore/buffer",
        "//pkg/blobstore/slicing",
        "//pkg/digest",
        "//pkg/empty_blobs:emptyblobs",
        "//pkg/grpc",
        "//pkg/justbuild",
        "//pkg/proto/multigeneration",
        "//pkg/proto/configuration/blobstore",
        "//pkg/proto/configuration/bb_storage",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
	    "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",

    ],
)
