load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "multigeneration_proto",
    srcs = ["multigeneration.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
    ],
)

go_proto_library(
    name = "multigeneration_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/multigeneration",
    proto = ":multigeneration_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution"],
)

go_library(
    name = "multigeneration",
    embed = [":multigeneration_go_proto"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/multigeneration",
    visibility = ["//visibility:public"],
)
